--- a/assets/css/critical.scss
+++ b/assets/css/critical.scss
@@ -249,9 +249,11 @@ body {
         @extend %decoration-none;
       }
     }
-    h2.title,
-    p.content {
+    h2.title {
       margin: 0 0 15px;
+    }
+    p.content {
+      margin: 15px 0
     }
     section.content {
       margin: 15px 0;
@@ -266,6 +268,14 @@ body {
           width: 185px;
         }
       }
+    }
+    time.date {
+      @include color(color, meta);
+    }
+    div.meta-info {
+      @extend %content-space-between;
+      @extend %flex;
+      @extend %items-center;
     }
     &.book {
       margin-bottom: 20px;
