--- a/layouts/articles/summary.html
+++ b/layouts/articles/summary.html
@@ -1,5 +1,11 @@
 <article class="post">
   <h2 class="title"><a href='{{ .Permalink }}' >{{ .Title }}</a></h2>
-  {{ partial "date.html" . }}
   <p class="content">{{ .Summary }}</p>
+  <div class="meta-info">
+    {{ partial "date.html" . }}
+    {{ $s := .Section }}
+    {{ with .Params.category }}
+      <p class="tag"><span>#</span><a class="meta" href="/{{ $s }}/category/{{ . | urlize }}">{{.}}</a></p>
+    {{ end }}
+  </div>
 </article>
