--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -70,7 +70,7 @@
   {{ $ati180 := resources.Get "icons/apple-touch-icon-180x180.png" }}
   <link rel="apple-touch-icon" sizes="180x180" href="{{ $ati180.RelPermalink }}">
   {{ $spt := resources.Get "icons/safari-pinned-tab.svg" | minify }}
-  <link rel="mask-icon" color="#8F3A6D" href="{{ $spt.RelPermalink }}">
+  <link rel="mask-icon" color="#BB3117" href="{{ $spt.RelPermalink }}">
 
   <!-- Icons -->
   {{ $i128 := resources.Get "icons/icon-128x128.png" }}
