Colors and layout updates.

--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -11,7 +11,7 @@ $light: (
   accent: #21232E,
   background: #fff,
   box: 8px 8px 0 0 #545454,
-  link: #8F3A6D,
+  link: #A32C14,
   meta: #545454,
   text: #424352,
 );
