--- a/layouts/partials/book-cats.html
+++ b/layouts/partials/book-cats.html
@@ -11,6 +11,11 @@
   </p>
   <p class="tag">
     <span>#</span>
+    <input id="podcasts" type="checkbox" name="category" onclick="cat(this)">
+    <label for="podcasts" class="category">podcasts</label>
+  </p>
+  <p class="tag">
+    <span>#</span>
     <input id="tweets" type="checkbox" name="category" onclick="cat(this)">
     <label for="tweets" class="category">tweets</label>
   </p>
