--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -1,21 +1,26 @@
 // Theme definitions
+$black: (
+  background: #000,
+  box: 8px 8px 0 0 #BE9423,
+  link: #FBCD23,
+  meta: #BE9423,
+  text: #fff,
+);
 $dark: (
-  accent: #2EB88C,
   background: #12151B,
   box: 8px 8px 0 0 #71ADBC,
-  link: #71ADBC,
-  meta: #F2815A,
+  link: #F2815A,
+  meta: #71ADBC,
   text: #9DA1B4,
 );
 $light: (
-  accent: #21232E,
   background: #fff,
   box: 8px 8px 0 0 #545454,
   link: #A32C14,
   meta: #545454,
-  text: #424352,
+  text: #12151B,
 );
 @mixin color($property, $varName) {
   #{$property}: map-get($light, $varName);
-  #{$property}: var(--#{$varName}, map-get($light, $varName));
+  #{$property}: var(--#{$varName});
 }
