--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -7,7 +7,7 @@
         {{ partial "date.html" . }}
         {{ $s := .Section }}
         {{ with .Params.category }}
-          <p class="tag"><span>#</span><a class="meta" href="/{{ $s }}/category/{{ . | urlize }}">{{.}}</a></p>
+          <p class="tag"><span class="meta">#</span><a href="/{{ $s }}/category/{{ . | urlize }}">{{.}}</a></p>
         {{ end }}
       </div>
     </article>
