--- a/assets/css/colors.scss
+++ b/assets/css/colors.scss
@@ -1,21 +1,24 @@
 // Theme definitions
 $black: (
   background: #000,
-  box: 8px 8px 0 0 #BE9423,
-  link: #FBCD23,
-  meta: #BE9423,
-  text: #fff,
+  box: 8px 8px 0 0 #969696,
+  button: rgba(#FFF,.7),
+  link: #EB7760,
+  meta: #969696,
+  text: #FFF,
 );
 $dark: (
   background: #12151B,
   box: 8px 8px 0 0 #71ADBC,
+  button: rgba(#9DA1B4,.7),
   link: #F2815A,
   meta: #71ADBC,
   text: #9DA1B4,
 );
 $light: (
-  background: #fff,
+  background: #FFF,
   box: 8px 8px 0 0 #545454,
+  button: rgba(#12151B,.7),
   link: #A32C14,
   meta: #545454,
   text: #12151B,
