--- a/layouts/partials/book-cats.html
+++ b/layouts/partials/book-cats.html
@@ -1,27 +1,27 @@
 <nav class="all-tags categories">
-  <p class="tag">
+  <div class="tag">
     <span>#</span>
     <input id="articles" type="checkbox" name="category" onclick="cat(this)">
     <label for="articles" class="category">articles</label>
-  </p>
-  <p class="tag">
+  </div>
+  <div class="tag">
     <span>#</span>
     <input id="comics" type="checkbox" name="category" onclick="cat(this)">
     <label for="comics" class="category">comics</label>
-  </p>
-  <p class="tag">
+  </div>
+  <div class="tag">
     <span>#</span>
     <input id="podcasts" type="checkbox" name="category" onclick="cat(this)">
     <label for="podcasts" class="category">podcasts</label>
-  </p>
-  <p class="tag">
+  </div>
+  <div class="tag">
     <span>#</span>
     <input id="tweets" type="checkbox" name="category" onclick="cat(this)">
     <label for="tweets" class="category">tweets</label>
-  </p>
-  <p class="tag">
+  </div>
+  <div class="tag">
     <span>#</span>
     <input id="videos" type="checkbox" name="category" onclick="cat(this)">
     <label for="videos" class="category">videos</label>
-  </p>
+  </div>
 </nav>
