--- a/layouts/partials/theme-swticher.html
+++ b/layouts/partials/theme-swticher.html
@@ -1,5 +1,5 @@
-<button id="theme-switcher" aria-label="Switch Themes">
-  <input id="palette" type="checkbox" />
+<div id="theme-switcher" aria-label="Switch Themes">
+  <input type="checkbox" id="palette" name="palette">
   <label class="drop" for="palette">
     <svg width="100%" height="100%" viewBox="0 0 384 384" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;">
       <path d="M273.217,106.899C246.036,62.035 215.804,23.206 200.201,4.053C198.113,1.488 194.98,-0.001 191.673,0C188.365,0 185.233,1.489 183.144,4.054C167.542,23.213 137.31,62.055 110.129,106.923C75.101,164.746 57.34,212.553 57.34,249.013C57.34,323.084 117.601,383.345 191.672,383.345C265.743,383.345 326.004,323.084 326.004,249.013C326.005,212.529 308.246,164.715 273.217,106.899ZM210.106,333.868C202.262,335.874 194.12,336.89 185.901,336.89C135.715,336.89 94.886,298.961 94.886,252.34C94.886,241.085 97.856,227.935 103.711,213.257C104.7,210.777 107.518,209.362 110.296,209.962C113.072,210.56 114.936,212.98 114.65,215.612C114.308,218.76 114.134,221.835 114.134,224.748C114.134,275.483 155.015,317.969 209.227,323.569C211.925,323.848 214.03,325.866 214.245,328.381C214.461,330.896 212.723,333.198 210.106,333.868Z" style="fill-rule:nonzero;"/>
@@ -10,4 +10,4 @@
     <p id="dark" class="colors">Dark</p>
     <p id="light" class="colors">Light</p>
   </nav>
-</button>
+</div>
