--- a/layouts/partials/book-cats.html
+++ b/layouts/partials/book-cats.html
@@ -1,25 +1,25 @@
 <nav class="all-tags categories">
-  <div class="tag">
+  <div class="tag articles">
     <span>#</span>
     <input id="articles" type="checkbox" name="category" onclick="cat(this)">
     <label for="articles" class="category">articles</label>
   </div>
-  <div class="tag">
+  <div class="tag comics">
     <span>#</span>
     <input id="comics" type="checkbox" name="category" onclick="cat(this)">
     <label for="comics" class="category">comics</label>
   </div>
-  <div class="tag">
+  <div class="tag podcasts">
     <span>#</span>
     <input id="podcasts" type="checkbox" name="category" onclick="cat(this)">
     <label for="podcasts" class="category">podcasts</label>
   </div>
-  <div class="tag">
+  <div class="tag tweets">
     <span>#</span>
     <input id="tweets" type="checkbox" name="category" onclick="cat(this)">
     <label for="tweets" class="category">tweets</label>
   </div>
-  <div class="tag">
+  <div class="tag videos">
     <span>#</span>
     <input id="videos" type="checkbox" name="category" onclick="cat(this)">
     <label for="videos" class="category">videos</label>
