--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -113,6 +113,7 @@
         var current = body.className;
         var color = theme.id;
         body.classList.replace(current, color);
+        document.getElementById('palette').checked = false;
         localStorage.removeItem('theme');
         localStorage.setItem('theme', color);
       }, false);
